<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020.
  ~
  ~ This file is part of MediaLocker.
  ~
  ~ MediaLocker is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MediaLocker is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/lblPwdHeader"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/dialog_pwd"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/dialog_textColor"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:id="@+id/txtPwd"
        android:layout_width="200dp"
        android:layout_height="@dimen/min_field"
        android:inputType="textPassword"
        android:autofillHints="@string/dialog_pwd_password"
        android:hint="@string/dialog_pwd_password"
        app:layout_constraintTop_toBottomOf="@+id/lblPwdHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/txtPwdRepeat"
        android:layout_width="200dp"
        android:layout_height="@dimen/min_field"
        android:inputType="textPassword"
        android:autofillHints="@string/dialog_pwd_password_repeat"
        android:hint="@string/dialog_pwd_password_repeat"
        app:layout_constraintTop_toBottomOf="@+id/txtPwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/cmdPwdOk"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_pwd_ok"
        app:layout_constraintTop_toBottomOf="@+id/txtPwdRepeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>